test_case/rust-lang_rust/58566_465150337_77.rs
\n\nWith this approach, x and y share ownership of the data via the `Rc` (reference\ncount type). `RefCell` essentially performs runtime borrow checking: ensuring\nthat at most one writer or multiple readers can access the data at any one time.\n\nIf you wish to learn more about ownership in Rust, start with the chapter in the\nBook:\n\nhttps://doc.rust-lang.org/book/ch04-00-understanding-ownership.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":590,"byte_end":591,"line_start":31,"line_end":31,"column_start":22,"column_end":23,"is_primary":false,"text":[{"text":"        drop_unsized(x);","highlight_start":22,"highlight_end":23}],"label":"value moved here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":611,"byte_end":613,"line_start":32,"line_end":32,"column_start":18,"column_end":20,"is_primary":true,"text":[{"text":"        let _y = *x; //~ERROR use of moved value","highlight_start":18,"highlight_end":20}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":528,"byte_end":529,"line_start":30,"line_end":30,"column_start":13,"column_end":14,"is_primary":false,"text":[{"text":"        let x = \"hello\".to_owned().into_boxed_str();","highlight_start":13,"highlight_end":14}],"label":"move occurs because `x` has type `std::boxed::Box<str>`, which does not implement the `Copy` trait","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0382]: use of moved value: `*x`\n  --> /checkout/src/test/ui/unsized-locals/double-move.rs:32:18\n   |\nLL |         let x = \"hello\".to_owned().into_boxed_str();\n   |             - move occurs because `x` has type `std::boxed::Box<str>`, which does not implement the `Copy` trait\nLL |         drop_unsized(x);\n   |                      - value moved here\nLL |         let _y = *x; //~ERROR use of moved value\n   |                  ^^ value used here after move\n\n"}
[01:30:22] {"message":"use of moved value: `y`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n